# cpp-template

./: CMakeLists.txt  LICENSE  main.cpp  readme.md
.github/workflows/: build.yml
cmake/: CodeCoverage.cmake
include/: CMakeLists.txt  example.hpp
src/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  example_tests.cpp
